Require Java 11+